objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contract_Coverage__c</fullName>
        <label>Contract Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Samples</fullName>
                </value>
                <value>
                    <fullName>Medicare Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Price__c</fullName>
        <label>Contracted Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_for_Pharma_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created for Pharma Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSL__c</fullName>
        <description>Desired Stocking Level, expressed in number of weeks (based on average weekly usage)</description>
        <inlineHelpText>Desired Stocking Level, expressed in number of weeks (based on average weekly usage)</inlineHelpText>
        <label>DSL</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Address_Last_Changed__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Records when acct name, phone, fax, or address is changed</description>
        <label>Date Address Last Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Record_Last_Changed__c</fullName>
        <description>Used to trigger changes of relevant ERP Customer data via middleware.</description>
        <inlineHelpText>Used to trigger changes of relevant ERP Customer data via middleware.</inlineHelpText>
        <label>Date Record Last Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Report_Type__c</fullName>
        <label>Delivery Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Fax &amp; Portal</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designated_NCI_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designated NCI Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_send_IOE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked means Do Not Send Initial Outreach Email for all Match Records of this Account.</inlineHelpText>
        <label>Do not send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EORI_Tax_ID__c</fullName>
        <label>EORI/Tax ID #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fellowship_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US Fellowship Programs focused on Med Onc/Heme or Med Onc onlly - provided by ASCO.</description>
        <label>Fellowship Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First3__c</fullName>
        <description>First 3 digits of Reporting Zip Code. Hidden field. Used in Territory Assignment Rules.</description>
        <formula>LEFT(BillingPostalCode, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First 3 digits of Reporting Zip Code. Hidden field. Used in Territory Assignment Rules.</inlineHelpText>
        <label>First3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sample_Date__c</fullName>
        <label>First Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Won_Opp__c</fullName>
        <label>First Won Opp</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flatiron__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flatiron</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_Field_Designated_NCI_Center__c</fullName>
        <description>NS:07/02/18 Created a formula field to populate the result of parent Designated NCI center  on to the child account.</description>
        <formula>OR (Parent.Parent.Parent.Parent.Designated_NCI_Center__c ,
 Parent.Parent.Parent.Designated_NCI_Center__c ,
 Parent.Parent.Designated_NCI_Center__c ,
 Parent.Designated_NCI_Center__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent is Designated NCI Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_Field_NCCN_Region__c</fullName>
        <description>NS:07/02/18 Created a formula field to populate the result of parent NCCN region on to the child account.</description>
        <formula>BLANKVALUE(TEXT( Parent.Parent.Parent.NCCN_Region__c ),
BLANKVALUE(TEXT( Parent.Parent.NCCN_Region__c ),
BLANKVALUE(TEXT( Parent.NCCN_Region__c ),
 TEXT(NCCN_Region__c) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCCN Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Field_NCCN__c</fullName>
        <description>NS:07/02/18 This is a formula field that captures the the information from parent account to child account</description>
        <formula>OR(  Parent.Parent.Parent.Parent.NCCN__c , Parent.Parent.Parent.NCCN__c , Parent.Parent.NCCN__c ,
 Parent.NCCN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent is NCCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_Field_NCI_Region__c</fullName>
        <description>NS:07/02/18 Created a formula field to populate the result of parent NCI region on to the child account.</description>
        <formula>BLANKVALUE(TEXT(  Parent.Parent.Parent.NCI_Region__c   ),
BLANKVALUE(TEXT(  Parent.Parent.NCI_Region__c  ),
BLANKVALUE(TEXT(  Parent.NCI_Region__c  ),
 TEXT(NCI_Region__c) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NCI Region of Parent Account, if any; otherwise, this is the account&apos;s NCI region</inlineHelpText>
        <label>Effective NCI Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation_Accuracy__c</fullName>
        <formula>TEXT(  BillingGeocodeAccuracy  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geolocation_Accuracy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grandparent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Grandparent Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Value_MDs__c</fullName>
        <description>Data originally from 159 Solutions import Aug 2017</description>
        <inlineHelpText>Number of high-value MDs, quintiles 3-5</inlineHelpText>
        <label>High-Value MDs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRB_Date_For_Report__c</fullName>
        <formula>IF(NOT( ISBLANK( IRB_Date__c)),  
IRB_Month__c + &quot;-&quot; + TEXT(DAY(IRB_Date__c)) + &quot;-&quot; + TEXT(YEAR(IRB_Date__c)),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for CSV Export for report VIS Accounts</inlineHelpText>
        <label>IRB Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRB_Date__c</fullName>
        <inlineHelpText>Date that this site received IRB approval. Used for HUDSON, VISION study sites.</inlineHelpText>
        <label>IRB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRB_Month__c</fullName>
        <description>Used for VISION Samples IRB Date CSV export</description>
        <formula>CASE(MONTH(IRB_Date__c), 
1,&apos;JAN&apos;, 
2,&apos;FEB&apos;, 
3,&apos;MAR&apos;, 
4,&apos;APR&apos;, 
5,&apos;MAY&apos;, 
6,&apos;JUN&apos;, 
7,&apos;JUL&apos;, 
8,&apos;AUG&apos;, 
9,&apos;SEP&apos;, 
10,&apos;OCT&apos;, 
11,&apos;NOV&apos;, 
12,&apos;DEC&apos;, 
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRB Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISR Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Account_Owner__c</fullName>
        <formula>NOT(Owner.IsActive)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individually_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individually Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institutional_Billing_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institutional Billing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Account__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NCI_Center_Yes_No__c</fullName>
        <description>Renders text saying whether an account is Designated NCI Center or NCI Satellite, or not. For email template.</description>
        <formula>IF(
OR(Designated_NCI_Center__c=TRUE, 
NCI_Satellite__c=TRUE),&quot; ** This is an NCI Center **&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is NCI Center Yes No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <label>Lab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RESL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Sample_Date__c</fullName>
        <label>Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>BillingLatitude</formula>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Patient - Internet</fullName>
                </value>
                <value>
                    <fullName>Physician - Internet</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Sales Prospect</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Research Account</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>BillingLongitude</formula>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Owner__c</fullName>
        <description>DEPRECATED</description>
        <label>MA Owner-DEPR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kimberly Banks</fullName>
                </value>
                <value>
                    <fullName>Carin Espenschied</fullName>
                </value>
                <value>
                    <fullName>Scott Shell</fullName>
                </value>
                <value>
                    <fullName>Lindsay Fosler</fullName>
                </value>
                <value>
                    <fullName>Alexsandra Franovic</fullName>
                    <isActive>false</isActive>
                    <label>Alexsandra Franovic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Owner_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BiopharmaMAAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to include certain accounts on med affairs reports.</description>
        <label>MA Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <description>Minimum Order Quantity, expressed in number of kits</description>
        <inlineHelpText>Minimum Order Quantity, expressed in number of kits</inlineHelpText>
        <label>MOQ</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Amendment_No__c</fullName>
        <inlineHelpText>Documents can be uploaded via the &apos;Files&apos; Related List, below</inlineHelpText>
        <label>MSA Amendment #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Amendment_Status__c</fullName>
        <label>MSA Amendment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Guardant Review</fullName>
                </value>
                <value>
                    <fullName>Customer Execution</fullName>
                </value>
                <value>
                    <fullName>Guardant Execution</fullName>
                </value>
                <value>
                    <fullName>Fully Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Amendment__c</fullName>
        <inlineHelpText>Is an MSA Amendment Required?</inlineHelpText>
        <label>MSA Amendment Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Expiration_Date__c</fullName>
        <label>MSA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Name__c</fullName>
        <label>MSA Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Start_Date__c</fullName>
        <label>MSA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Status__c</fullName>
        <label>MSA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Guardant Review</fullName>
                </value>
                <value>
                    <fullName>Customer Execution</fullName>
                </value>
                <value>
                    <fullName>Guardant Execution</fullName>
                </value>
                <value>
                    <fullName>Fully Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Three_month_Date__c</fullName>
        <formula>MSA_Expiration_Date__c-90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Three months before the MSA Expiration Date</inlineHelpText>
        <label>MSA Three-month Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSL_Cell__c</fullName>
        <label>MSL Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MSL_Email__c</fullName>
        <label>MSL Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MSL_ID__c</fullName>
        <formula>Account_MSL__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL_Signature_First_Line__c</fullName>
        <label>MSL Signature First Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL__c</fullName>
        <description>NS:10/16/18 Whenever you add a MSL to the picklist value, add the user id to the process builder (Auto assign Account MSL and Sample:Update MSL Email) These process updates the Email fields on Account and Samples. We use this Email fields to send an Email alerts.</description>
        <inlineHelpText>Medical Science Liaison</inlineHelpText>
        <label>MSL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ali Roberts</fullName>
                    <isActive>false</isActive>
                    <label>Ali Roberts</label>
                </value>
                <value>
                    <fullName>Amber Carter</fullName>
                </value>
                <value>
                    <fullName>Angela Thompson</fullName>
                </value>
                <value>
                    <fullName>Ashley Wells</fullName>
                </value>
                <value>
                    <fullName>Becky Nagy</fullName>
                </value>
                <value>
                    <fullName>Brianna Volz</fullName>
                </value>
                <value>
                    <fullName>Carin Espenschied</fullName>
                    <isActive>false</isActive>
                    <label>Carin Espenschied</label>
                </value>
                <value>
                    <fullName>Caroline Weipert</fullName>
                </value>
                <value>
                    <fullName>Christian Klosowski</fullName>
                </value>
                <value>
                    <fullName>Christine Lee</fullName>
                </value>
                <value>
                    <fullName>Chuck Hensel</fullName>
                </value>
                <value>
                    <fullName>Erin Borchardt</fullName>
                </value>
                <value>
                    <fullName>Jennifer Saam</fullName>
                </value>
                <value>
                    <fullName>Julia Jones</fullName>
                </value>
                <value>
                    <fullName>Kaylee Faulkner</fullName>
                    <isActive>false</isActive>
                    <label>Kaylee Faulkner</label>
                </value>
                <value>
                    <fullName>Kelli Swan</fullName>
                    <isActive>false</isActive>
                    <label>Kelli Swan</label>
                </value>
                <value>
                    <fullName>Kelsey Johnson</fullName>
                </value>
                <value>
                    <fullName>Kim Hamman</fullName>
                    <label>Kim Hamann</label>
                </value>
                <value>
                    <fullName>Kristin Edwards</fullName>
                </value>
                <value>
                    <fullName>Kristin Price</fullName>
                </value>
                <value>
                    <fullName>Krysten Shipley</fullName>
                </value>
                <value>
                    <fullName>Lesli Kiedrowski</fullName>
                </value>
                <value>
                    <fullName>Leylah Drusbosky</fullName>
                </value>
                <value>
                    <fullName>MedAffairs</fullName>
                    <default>true</default>
                    <label>MedAffairs</label>
                </value>
                <value>
                    <fullName>Megan McKenna</fullName>
                </value>
                <value>
                    <fullName>MSL NE - Open</fullName>
                    <isActive>false</isActive>
                    <label>MSL NE - Open</label>
                </value>
                <value>
                    <fullName>MSL SE - Open</fullName>
                    <isActive>false</isActive>
                    <label>MSL SE - Open</label>
                </value>
                <value>
                    <fullName>Nassim Taherian</fullName>
                </value>
                <value>
                    <fullName>Pauline Fontaine</fullName>
                </value>
                <value>
                    <fullName>Robin Chambers</fullName>
                    <isActive>false</isActive>
                    <label>Robin Chambers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_NCI_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main NCI Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Insurance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NCI Accounts</relationshipLabel>
        <relationshipName>NCI_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProBT__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProBT__External_ID__c</fullName>
        <label>MedProID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object</label>
        <referenceTo>MedProBT__Parent_Object__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProBT__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Med_Affairs_Director__c</fullName>
        <label>Med Affairs Director</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Becky Nagy</fullName>
                </value>
                <value>
                    <fullName>Victoria Raymond</fullName>
                </value>
                <value>
                    <fullName>Jennifer Saam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCN_Region__c</fullName>
        <label>NCCN Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCI_Region__c</fullName>
        <inlineHelpText>A region must be selected if &quot;Designated NCI Center&quot; is checked</inlineHelpText>
        <label>NCI Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCI_Satellite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCI Satellite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name of Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Prior_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Open Prior Authorizations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Last_6_mos__c</fullName>
        <description>Uses Lookup Rollup Summary to rollup # of samples for this account received in last 6 months</description>
        <inlineHelpText>Number of Samples received in the last 6 months</inlineHelpText>
        <label>Number of Samples Last 6 mos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples__c</fullName>
        <description>Uses Lookup Rollup Summary to roll up # of samples attributed to this account</description>
        <label>Number of Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_1_Notes__c</fullName>
        <label>Other 1 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_2_Notes__c</fullName>
        <label>Other 2 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_3_Notes__c</fullName>
        <label>Other 3 Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pardot_MSL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hidden field used for Pardot campaigns</description>
        <label>Pardot MSL</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GHI Medical Affairs</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force-MedAffairs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>MSL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Owner__c</fullName>
        <formula>Parent.Owner.FirstName+ &quot; &quot;+Parent.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Contact_Name__c</fullName>
        <label>Payment Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N30</fullName>
                </value>
                <value>
                    <fullName>N45</fullName>
                </value>
                <value>
                    <fullName>N60</fullName>
                </value>
                <value>
                    <fullName>N90</fullName>
                </value>
                <value>
                    <fullName>30EOM</fullName>
                </value>
                <value>
                    <fullName>45EOM</fullName>
                </value>
                <value>
                    <fullName>60EOM</fullName>
                </value>
                <value>
                    <fullName>90EOM</fullName>
                </value>
                <value>
                    <fullName>Post Insurance Collection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>